--- a/src/components/ChannelList/channel.module.scss
+++ b/src/components/ChannelList/channel.module.scss
@@ -26,7 +26,7 @@
   height: calc(100% - var(--app-toolbar-height));
   margin-top: var(--app-toolbar-height);
   overflow-y: auto;
-  padding: 10px;
+  padding: 10px 0 10px 10px;
 }
 
 .list {
